# shannon

./: .gitignore  CLAUDE.md  FILES_MANIFEST.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  SETUP.md  STATUS.md  config.example.yaml  config.yaml  personality.md  pyproject.toml  requirements.txt  setup_project.py
docs/plans/: 2026-03-01-four-features.md  2026-03-03-multi-provider-llm-design.md  2026-03-03-multi-provider-llm-plan.md
docs/superpowers/plans/: 2026-04-01-shannon-implementation.md  2026-04-02-anthropic-api-overhaul.md  2026-04-02-discord-messaging-improvements.md  2026-04-05-bugfix-audit.md  2026-04-05-discord-voice-support.md
docs/superpowers/specs/: 2026-04-01-shannon-ai-vtuber-design.md  2026-04-02-anthropic-api-overhaul-design.md  2026-04-02-discord-messaging-improvements-design.md  2026-04-04-bugfix-audit-design.md  2026-04-05-discord-voice-support-design.md
shannon/: __init__.py  app.py  bus.py  cli.py  config.py  events.py  main.py  models.py
shannon.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
shannon/autonomy/: loop.py
shannon/brain/: brain.py  claude.py  prompt.py  reactions.py  tool_dispatch.py  tool_registry.py  types.py
shannon/computer/: __init__.py  executor.py  screenshot.py
shannon/core/: auth.py  bus.py  chunker.py  commands.py  context.py  llm.py  pause.py  pipeline.py  scheduler.py  system_prompt.py  tool_executor.py
shannon/core/llm/: __init__.py  anthropic.py  base.py  local.py  types.py
shannon/input/: manager.py
shannon/memory/: __init__.py  store.py
shannon/messaging/: manager.py
shannon/output/: manager.py
shannon/planner/: __init__.py  engine.py  models.py
shannon/tools/: __init__.py  base.py  bash_executor.py  browser.py  claude_code.py  interactive.py  memory_backend.py  memory_tools.py  plan_tool.py  shell.py  text_editor_executor.py
shannon/transports/: __init__.py  base.py  discord_transport.py  signal_transport.py
shannon/utils/: logging.py  platform.py
shannon/vision/: manager.py
shannon/webhooks/: __init__.py  handlers.py  models.py  server.py
tests/: conftest.py  test_app.py  test_auth.py  test_autonomy.py  test_bash_executor.py  test_brain.py  test_bus.py  test_chunker.py  test_claude_client.py  test_commands.py  test_computer_executor.py  test_config.py  test_discord_provider.py  test_discord_voice.py  test_events.py  test_input.py  test_integration.py  test_memory.py  test_memory_backend.py  test_memory_tools.py  test_messaging.py  test_output.py  test_pause.py  test_plan_tool.py  test_planner.py  test_reactions.py  test_screenshot.py  test_text_editor_executor.py  test_tool_dispatch.py  test_tool_executor.py  test_tool_registry.py  test_types.py  test_vision.py  test_webhook_event.py  test_webhooks.py
(+15 files in other folders)
