[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shannon"
version = "0.1.0"
description = "LLM-powered autonomous assistant"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "discord.py>=2.3",
    "pexpect>=4.9; sys_platform != 'win32'",
    "pywinpty>=2.0; sys_platform == 'win32'",
    "playwright>=1.40",
    "croniter>=2.0",
    "structlog>=24.0",
    "aiosqlite>=0.20",
    "tiktoken>=0.7",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
shannon = "shannon.main:cli"

[tool.setuptools.packages.find]
include = ["shannon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
