[project]
name = "shannon"
version = "0.2.0"
description = "AI VTuber powered by Claude"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "anthropic>=0.52.0",
]

[project.optional-dependencies]
computer = ["pyautogui>=0.9.54"]
vision = ["mss>=9.0.0", "opencv-python>=4.9.0", "Pillow>=10.0.0"]
tts = [
    "piper-tts>=1.2.0",
    "g2pw>=0.1.1",
    "torch>=2.0.0",
    "unicode-rbnf>=2.0.0",
    "sentence-stream>=1.0.0",
    "pathvalidate>=3.0.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
]
coqui = [
    "coqui-tts>=0.24.0",
    "torchaudio>=2.0.0",
    "transformers>=4.47,<5",
]
stt = ["faster-whisper>=1.0.0"]
vtuber = ["websockets>=12.0"]
messaging = ["discord.py>=2.3.0"]
voice = ["PyNaCl>=1.5.0", "davey>=0.1.0", "audioop-lts>=0.2.1"]
macos = ["truststore>=0.9.0"]
all = ["shannon[computer,vision,tts,coqui,stt,vtuber,messaging,voice,macos]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
shannon = "shannon.app:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shannon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
